add material ui lib

--- a/dashboard/.eslintrc
+++ b/dashboard/.eslintrc
@@ -20,6 +20,7 @@
             }
         ]
     },
+    "parser": "babel-eslint",
     "settings": {
         "import/resolver": {
             "node": {
