--- a/dashboard/.eslintrc
+++ b/dashboard/.eslintrc
@@ -14,6 +14,7 @@
         "fetch": false
     },
     "rules": {
+        "react/forbid-prop-types": [0],
         "react/jsx-filename-extension": [
             1,
             {
