--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "eslint": "5.16.0",
+    "install": "^0.12.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
