--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/lab": "^3.0.0-alpha.30",
+    "dotenv": "^8.0.0",
     "eslint": "5.16.0",
     "install": "^0.12.2",
     "prop-types": "^15.7.2",
